--- a/docs/styles/components/navigation.css
+++ b/docs/styles/components/navigation.css
@@ -7,10 +7,10 @@
 .screen {
     display: none;
     width: 100%;
-    height: calc(100vh - 120px);
+    min-height: calc(100vh - 120px);
     /* padding: 20px; */
     box-sizing: border-box;
-    overflow-y: auto;
+    overflow: visible;
     position: relative;
 }
 
