--- a/docs/templates/components/header.html
+++ b/docs/templates/components/header.html
@@ -2,10 +2,10 @@
     <div class="header-content">
         <h1 class="app-title" id="app-title">もも 일본어 단어장</h1>
         <div class="header-buttons">
-            <button class="header-download-btn" id="downloadJpgBtn">
+            <!-- <button class="header-download-btn" id="downloadJpgBtn">
                 <span class="download-icon">🖼️</span>
                 JPG
-            </button>
+            </button> -->
         </div>
     </div>
 </header>
