--- a/docs/styles/themes/glassmorphism.css
+++ b/docs/styles/themes/glassmorphism.css
@@ -818,7 +818,7 @@ body::before {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding-top: 1.5rem;
+    /* padding-top: 1.5rem; */
     margin: 0 -2rem;
     padding-left: 2rem;
     padding-right: 2rem;
